# pyllmvalidate-cli

./: .coverage  README.md  a.txt  b.txt  callgraph.py  foo.py  main.py  pyproject.toml
bar/: baz.py
core/: __init__.py  core.py
examples/basic_project/: main.py
examples/multiple_files_libs/: baz.py  foo.py  main.py
examples/multiple_files_libs/calcualator/: __init__.py  calculator.py  utils.py
examples/multiple_files_no_libs/: foo.py  main.py
examples/one_file/: main.py
src/pyllmvalidate/: __init__.py  cli.py
src/pyllmvalidate/utils/: __init__.py  ai_utils.py  git_utils.py  lint_utils.py
src/pyllmvalidate/validators/: __init__.py  core.py
tests/: test_main.py  test_math_operations.py
tests/fixtures/invalid_code/: main.py
tests/fixtures/valid_code/: main.py
tests/unit/: test_cli.py  test_validators.py
